--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Competitor Analysis Presentation for Assure India</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #e2e8f0;
+            background-color: #f0f2f5;
         }
         .slide {
             background-color: white;
@@ -42,19 +43,22 @@
             color: #64748b;
         }
         .tab-button {
-            padding: 0.5rem 1rem;
+            padding: 0.75rem 1.5rem;
             border-radius: 0.5rem;
             font-weight: 600;
             cursor: pointer;
             transition: all 0.2s ease-in-out;
+            border: 2px solid transparent;
         }
         .tab-button.active {
             background-color: #1e293b;
             color: white;
+            border-color: #1e293b;
         }
         .tab-button:not(.active) {
             background-color: white;
             color: #334155;
+            border-color: #e2e8f0;
         }
         .tab-content {
             display: none;
@@ -68,7 +72,7 @@
 
     <div class="container mx-auto p-4 sm:p-6 lg:p-8">
         <!-- Tab Navigation -->
-        <div class="mb-6 flex flex-wrap items-center gap-2">
+        <div class="mb-6 flex flex-wrap items-center gap-4">
             <button class="tab-button active" onclick="openTab(event, 'Summary')">Summary</button>
             <button class="tab-button" onclick="openTab(event, 'TTK')">TTK Prestige</button>
             <button class="tab-button" onclick="openTab(event, 'Cello')">Cello World</button>
@@ -242,6 +246,12 @@
                         </ul>
                     </div>
                     <div class="metric-card">
+                        <h3 class="metric-title mb-3">Engagement Metrics</h3>
+                        <canvas id="ttkChart"></canvas>
+                    </div>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mt-8">
+                    <div class="metric-card col-span-1">
                         <h3 class="metric-title mb-3">Top Strengths</h3>
                         <ul class="text-sm space-y-2 list-disc list-inside">
                             <li>Unmatched SEO and organic reach.</li>
@@ -249,9 +259,7 @@
                             <li>Excellent website user engagement.</li>
                         </ul>
                     </div>
-                </div>
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-8">
-                    <div class="metric-card">
+                    <div class="metric-card col-span-1">
                         <h3 class="metric-title mb-3">Top Weaknesses</h3>
                         <ul class="text-sm space-y-2 list-disc list-inside">
                             <li>No investment in paid search.</li>
@@ -259,7 +267,7 @@
                             <li>Premium pricing may alienate some segments.</li>
                         </ul>
                     </div>
-                    <div class="metric-card bg-red-50 border-red-200">
+                    <div class="metric-card bg-red-50 border-red-200 col-span-1">
                         <h3 class="metric-title text-red-800 mb-3">Strategic Gaps for Assure</h3>
                         <ul class="text-sm space-y-2 list-disc list-inside text-red-700">
                             <li>Use PPC to appear above their organic listings.</li>
@@ -278,13 +286,19 @@
                     <div class="metric-card">
                         <h3 class="metric-title mb-3">Key Metrics</h3>
                         <ul class="text-sm space-y-2">
+                            <li><span class="font-semibold">Authority Score:</span> 41</li>
+                            <li><span class="font-semibold">Organic Traffic:</span> 137K / month</li>
+                            <li><span class="font-semibold">Organic Keywords:</span> 3.8K</li>
                             <li><span class="font-semibold">Market Cap:</span> ₹12,146 Cr</li>
-                            <li><span class="font-semibold">Distribution:</span> 145,000+ retailers</li>
-                            <li><span class="font-semibold">Revenue Growth:</span> 16-19% CAGR</li>
-                            <li><span class="font-semibold">Portfolio:</span> Multi-category leader</li>
                         </ul>
                     </div>
                     <div class="metric-card">
+                        <h3 class="metric-title mb-3">Engagement Metrics</h3>
+                        <p class="text-center text-gray-500 mt-8">Data not available</p>
+                    </div>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mt-8">
+                    <div class="metric-card col-span-1">
                         <h3 class="metric-title mb-3">Top Strengths</h3>
                         <ul class="text-sm space-y-2 list-disc list-inside">
                             <li>Massive financial and distribution power.</li>
@@ -292,9 +306,7 @@
                             <li>Diverse product portfolio covering many needs.</li>
                         </ul>
                     </div>
-                </div>
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-8">
-                    <div class="metric-card">
+                    <div class="metric-card col-span-1">
                         <h3 class="metric-title mb-3">Top Weaknesses</h3>
                          <ul class="text-sm space-y-2 list-disc list-inside">
                             <li>Lower SEO focus compared to TTK Prestige.</li>
@@ -302,7 +314,7 @@
                             <li>No investment in paid search.</li>
                         </ul>
                     </div>
-                    <div class="metric-card bg-red-50 border-red-200">
+                    <div class="metric-card bg-red-50 border-red-200 col-span-1">
                         <h3 class="metric-title text-red-800 mb-3">Strategic Gaps for Assure</h3>
                         <ul class="text-sm space-y-2 list-disc list-inside text-red-700">
                             <li>Dominate specific product niches they overlook.</li>
@@ -321,13 +333,19 @@
                     <div class="metric-card">
                         <h3 class="metric-title mb-3">Key Metrics</h3>
                         <ul class="text-sm space-y-2">
+                            <li><span class="font-semibold">Authority Score:</span> 48</li>
+                            <li><span class="font-semibold">Organic Traffic:</span> 3.3K / month</li>
+                            <li><span class="font-semibold">Organic Keywords:</span> 25.7K</li>
                             <li><span class="font-semibold">Annual Revenue:</span> ₹800 Cr</li>
-                            <li><span class="font-semibold">Direct Sellers:</span> 82,000+</li>
-                            <li><span class="font-semibold">Retail Outlets:</span> 20,000+</li>
-                            <li><span class="font-semibold">Brand Ambassador:</span> Sanjeev Kapoor</li>
                         </ul>
                     </div>
                     <div class="metric-card">
+                        <h3 class="metric-title mb-3">Engagement Metrics</h3>
+                        <p class="text-center text-gray-500 mt-8">Data not available</p>
+                    </div>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mt-8">
+                    <div class="metric-card col-span-1">
                         <h3 class="metric-title mb-3">Top Strengths</h3>
                         <ul class="text-sm space-y-2 list-disc list-inside">
                             <li>Unique and powerful direct selling model.</li>
@@ -335,9 +353,7 @@
                             <li>Strong focus on innovation and premium products.</li>
                         </ul>
                     </div>
-                </div>
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-8">
-                    <div class="metric-card">
+                    <div class="metric-card col-span-1">
                         <h3 class="metric-title mb-3">Top Weaknesses</h3>
                         <ul class="text-sm space-y-2 list-disc list-inside">
                             <li>Smaller scale compared to market cap leaders.</li>
@@ -345,7 +361,7 @@
                             <li>No investment in paid search.</li>
                         </ul>
                     </div>
-                    <div class="metric-card bg-red-50 border-red-200">
+                    <div class="metric-card bg-red-50 border-red-200 col-span-1">
                         <h3 class="metric-title text-red-800 mb-3">Strategic Gaps for Assure</h3>
                         <ul class="text-sm space-y-2 list-disc list-inside text-red-700">
                             <li>Build a more diverse influencer marketing strategy.</li>
@@ -371,6 +387,12 @@
                         </ul>
                     </div>
                     <div class="metric-card">
+                        <h3 class="metric-title mb-3">Engagement Metrics</h3>
+                        <canvas id="agaroChart"></canvas>
+                    </div>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mt-8">
+                    <div class="metric-card col-span-1">
                         <h3 class="metric-title mb-3">Top Strengths</h3>
                         <ul class="text-sm space-y-2 list-disc list-inside">
                             <li>Strong SEO presence and traffic growth.</li>
@@ -378,9 +400,7 @@
                             <li>Effective digital-first marketing strategy.</li>
                         </ul>
                     </div>
-                </div>
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-8">
-                    <div class="metric-card">
+                    <div class="metric-card col-span-1">
                         <h3 class="metric-title mb-3">Top Weaknesses</h3>
                         <ul class="text-sm space-y-2 list-disc list-inside">
                             <li>Very high bounce rate, indicating poor UX.</li>
@@ -388,7 +408,7 @@
                             <li>No investment in paid search.</li>
                         </ul>
                     </div>
-                    <div class="metric-card bg-red-50 border-red-200">
+                    <div class="metric-card bg-red-50 border-red-200 col-span-1">
                         <h3 class="metric-title text-red-800 mb-3">Strategic Gaps for Assure</h3>
                         <ul class="text-sm space-y-2 list-disc list-inside text-red-700">
                             <li>Create a superior website experience to capture their lost traffic.</li>
@@ -414,6 +434,12 @@
                         </ul>
                     </div>
                     <div class="metric-card">
+                        <h3 class="metric-title mb-3">Engagement Metrics</h3>
+                        <canvas id="borosilChart"></canvas>
+                    </div>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mt-8">
+                    <div class="metric-card col-span-1">
                         <h3 class="metric-title mb-3">Top Strengths</h3>
                         <ul class="text-sm space-y-2 list-disc list-inside">
                             <li>Established brand name in glassware.</li>
@@ -421,9 +447,7 @@
                             <li>Solid financial backing.</li>
                         </ul>
                     </div>
-                </div>
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-8">
-                    <div class="metric-card">
+                    <div class="metric-card col-span-1">
                         <h3 class="metric-title mb-3">Top Weaknesses</h3>
                         <ul class="text-sm space-y-2 list-disc list-inside">
                             <li>Extremely poor website user experience (94% bounce rate).</li>
@@ -431,7 +455,7 @@
                             <li>No investment in paid search.</li>
                         </ul>
                     </div>
-                    <div class="metric-card bg-red-50 border-red-200">
+                    <div class="metric-card bg-red-50 border-red-200 col-span-1">
                         <h3 class="metric-title text-red-800 mb-3">Strategic Gaps for Assure</h3>
                         <ul class="text-sm space-y-2 list-disc list-inside text-red-700">
                             <li>This is the easiest competitor to outperform on all digital fronts.</li>
@@ -457,6 +481,47 @@
             }
             document.getElementById(tabName).style.display = "block";
             evt.currentTarget.className += " active";
+        }
+
+        window.onload = function() {
+            new Chart(document.getElementById('ttkChart').getContext('2d'), {
+                type: 'bar',
+                data: {
+                    labels: ['Bounce Rate', 'Pages per Visit'],
+                    datasets: [{
+                        label: 'TTK Prestige',
+                        data: [43.63, 4.07],
+                        backgroundColor: ['#10b981', '#10b981'],
+                    }]
+                },
+                options: { indexAxis: 'y', plugins: { legend: { display: false } } }
+            });
+
+            new Chart(document.getElementById('agaroChart').getContext('2d'), {
+                type: 'bar',
+                data: {
+                    labels: ['Bounce Rate', 'Pages per Visit'],
+                    datasets: [{
+                        label: 'AGARO',
+                        data: [78.18, 1.90],
+                        backgroundColor: ['#8b5cf6', '#8b5cf6'],
+                    }]
+                },
+                options: { indexAxis: 'y', plugins: { legend: { display: false } } }
+            });
+
+            new Chart(document.getElementById('borosilChart').getContext('2d'), {
+                type: 'bar',
+                data: {
+                    labels: ['Bounce Rate', 'Pages per Visit'],
+                    datasets: [{
+                        label: 'Borosil',
+                        data: [93.88, 1.19],
+                        backgroundColor: ['#3b82f6', '#3b82f6'],
+                    }]
+                },
+                options: { indexAxis: 'y', plugins: { legend: { display: false } } }
+            });
         }
     </script>
 
