--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
         .tab-content.active {
             display: block;
         }
+        .social-grid-container {
+            height: 250px; /* Or any desired height */
+            overflow-y: auto;
+            border: 1px solid #e2e8f0;
+            border-radius: 0.5rem;
+            padding: 0.5rem;
+        }
     </style>
 </head>
 <body class="text-slate-800">
@@ -178,23 +185,23 @@
                 <h2 class="slide-title border-purple-500">Key Keyword Insights</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                     <div>
-                        <h3 class="font-bold text-lg mb-3 text-slate-800">Foundational Brand Keywords</h3>
-                        <p class="text-sm text-slate-600 mb-3">These must be the immediate focus for both SEO and PPC to build a baseline of brand recognition.</p>
+                        <h3 class="font-bold text-lg mb-3 text-slate-800">High Volume Keywords (10k-100k Searches/Mo)</h3>
+                        <p class="text-sm text-slate-600 mb-3">Target these for broad reach and brand awareness. Competition is high.</p>
                         <ul class="space-y-2">
-                            <li class="bg-purple-50 p-2 rounded-md font-medium text-purple-900">assure india</li>
-                            <li class="bg-purple-50 p-2 rounded-md font-medium text-purple-900">assure products online</li>
-                            <li class="bg-purple-50 p-2 rounded-md font-medium text-purple-900">assure kitchen appliances</li>
-                            <li class="bg-purple-50 p-2 rounded-md font-medium text-purple-900">is assure a good brand</li>
+                            <li class="bg-red-50 p-2 rounded-md font-medium text-red-900">dinner set</li>
+                            <li class="bg-red-50 p-2 rounded-md font-medium text-red-900">tea cup set</li>
+                            <li class="bg-red-50 p-2 rounded-md font-medium text-red-900">juicer</li>
+                            <li class="bg-red-50 p-2 rounded-md font-medium text-red-900">hair dryer</li>
                         </ul>
                     </div>
                     <div>
-                        <h3 class="font-bold text-lg mb-3 text-slate-800">High-Impact Product Keywords</h3>
-                        <p class="text-sm text-slate-600 mb-3">Target these keywords to capture users actively looking to purchase in high-opportunity categories.</p>
+                        <h3 class="font-bold text-lg mb-3 text-slate-800">Mid-High Intent Keywords (1k-10k Searches/Mo)</h3>
+                        <p class="text-sm text-slate-600 mb-3">Focus on these for users closer to making a purchase.</p>
                         <ul class="space-y-2">
-                            <li class="bg-green-50 p-2 rounded-md font-medium text-green-900">buy air fryer online</li>
-                            <li class="bg-green-50 p-2 rounded-md font-medium text-green-900">assure dinner set price</li>
-                            <li class="bg-green-50 p-2 rounded-md font-medium text-green-900">best non-stick cookware india</li>
-                            <li class="bg-green-50 p-2 rounded-md font-medium text-green-900">affordable dinner sets for gifting</li>
+                            <li class="bg-yellow-50 p-2 rounded-md font-medium text-yellow-900">microwave glass bowl</li>
+                            <li class="bg-yellow-50 p-2 rounded-md font-medium text-yellow-900">glassware dinner set</li>
+                            <li class="bg-yellow-50 p-2 rounded-md font-medium text-yellow-900">best mixer</li>
+                            <li class="bg-yellow-50 p-2 rounded-md font-medium text-yellow-900">electric lunch box</li>
                         </ul>
                     </div>
                 </div>
@@ -276,6 +283,33 @@
                         </ul>
                     </div>
                 </div>
+                <div class="mt-8">
+                    <h3 class="metric-title mb-3">Social Media Presence</h3>
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                        <div class="metric-card">
+                            <h4 class="font-bold text-lg mb-2">Facebook</h4>
+                            <div class="social-grid-container grid grid-cols-3 gap-2">
+                                <img src="https://scontent.fccu27-2.fna.fbcdn.net/v/t39.30808-6/532706115_1192711372898820_9203677953563270191_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=127cfc&_nc_ohc=Au7erLGalKAQ7kNvwEzdmgs&_nc_oc=AdlvabHMW-sod0K3tKUV8zvVdP96vR8zd80It_ds20YmJ9NQ3SAoSxZTxsDhcgd-dqqnUtJl4wwha_j1v-pDpKHL&_nc_zt=23&_nc_ht=scontent.fccu27-2.fna&_nc_gid=Cr353RTxJqDTB5wsjn6Rng&oh=00_AfXX0CbG5AZLpekbugsJ1Q6PMzOIFRXxz1s_9cCp4x0d9g&oe=68ACE0BF" class="rounded w-full h-auto">
+                                <img src="https://scontent.fccu27-1.fna.fbcdn.net/v/t39.30808-6/532602186_1192548086248482_2651224585249923489_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=127cfc&_nc_ohc=fGGkopUWuskQ7kNvwHCrOuT&_nc_oc=AdnsLDHT2OInodFdaecAhavnTMSVJ1YqPSuOy-nHN2zyxLw1Ci0s5vriKR6mUaF0qA-uMaEy7xRc-c-g-71s2B_p&_nc_zt=23&_nc_ht=scontent.fccu27-1.fna&_nc_gid=J3oQVPveebsmbQagYf1qxg&oh=00_AfXomNEIrUQLYBddrkCeUGjBGhcgCTO3kuzr6LM08ZJstw&oe=68ACDE58" class="rounded w-full h-auto">
+                                <img src="https://scontent.fccu27-1.fna.fbcdn.net/v/t39.30808-6/528692799_1184092300427394_1994296621379694264_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=127cfc&_nc_ohc=AiXwcxNobFYQ7kNvwFj766z&_nc_oc=Adl-kWKfMJBgHJZ6kq2UiAc6hAcQ-VPCvV-OWIbRpbkMNrnYKRjQpK2tdsqUXZdDBp9DESOKOZAZDlvxfQb87WyJ&_nc_zt=23&_nc_ht=scontent.fccu27-1.fna&_nc_gid=CCEjnXgWCsl_mPpg2IRo6g&oh=00_AfWPjlyDmZTPde2ni2dwF5VNrJShE-Sn2PZO310EJGZa7g&oe=68ACFE57" class="rounded w-full h-auto">
+                                <img src="https://scontent.fccu20-1.fna.fbcdn.net/v/t39.30808-6/525266852_1179848014185156_4109199170684463168_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_ohc=g9yCzkSIEWEQ7kNvwFUKT3o&_nc_oc=Adkhklk1xW6i95Ggn9qYPpkNxWeXMcMqb4GMpV56KMWYnWdH3Qcf0vH-iM4YfUbO-Eqj6rrHkEE9yGQG3u4pfrFU&_nc_zt=23&_nc_ht=scontent.fccu20-1.fna&_nc_gid=xCsniRK7cxiUtqwjnWLm0g&oh=00_AfU30SbzEML4p16LDxlyG_3zMfNFgceEAcxSbCw-xwLMAg&oe=68ACDD13" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/dcfce7/166534?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/dcfce7/166534?text=Post" class="rounded w-full h-auto">
+                            </div>
+                        </div>
+                        <div class="metric-card">
+                            <h4 class="font-bold text-lg mb-2">Instagram</h4>
+                            <div class="social-grid-container grid grid-cols-3 gap-2">
+                                <img src="https://placehold.co/150x150/dcfce7/166534?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/dcfce7/166534?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/dcfce7/166534?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/dcfce7/166534?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/dcfce7/166534?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/dcfce7/166534?text=Post" class="rounded w-full h-auto">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         
@@ -321,6 +355,33 @@
                             <li>Outperform them on SEO for targeted categories.</li>
                             <li>Use PPC to capture traffic for their product categories.</li>
                         </ul>
+                    </div>
+                </div>
+                 <div class="mt-8">
+                    <h3 class="metric-title mb-3">Social Media Presence</h3>
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                        <div class="metric-card">
+                            <h4 class="font-bold text-lg mb-2">Facebook</h4>
+                            <div class="social-grid-container grid grid-cols-3 gap-2">
+                                <img src="https://placehold.co/150x150/ffedd5/c2410c?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/ffedd5/c2410c?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/ffedd5/c2410c?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/ffedd5/c2410c?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/ffedd5/c2410c?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/ffedd5/c2410c?text=Post" class="rounded w-full h-auto">
+                            </div>
+                        </div>
+                        <div class="metric-card">
+                            <h4 class="font-bold text-lg mb-2">Instagram</h4>
+                            <div class="social-grid-container grid grid-cols-3 gap-2">
+                                <img src="https://placehold.co/150x150/ffedd5/c2410c?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/ffedd5/c2410c?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/ffedd5/c2410c?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/ffedd5/c2410c?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/ffedd5/c2410c?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/ffedd5/c2410c?text=Post" class="rounded w-full h-auto">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -370,6 +431,33 @@
                         </ul>
                     </div>
                 </div>
+                 <div class="mt-8">
+                    <h3 class="metric-title mb-3">Social Media Presence</h3>
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                        <div class="metric-card">
+                            <h4 class="font-bold text-lg mb-2">Facebook</h4>
+                            <div class="social-grid-container grid grid-cols-3 gap-2">
+                                <img src="https://placehold.co/150x150/fce7f3/db2777?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/fce7f3/db2777?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/fce7f3/db2777?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/fce7f3/db2777?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/fce7f3/db2777?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/fce7f3/db2777?text=Post" class="rounded w-full h-auto">
+                            </div>
+                        </div>
+                        <div class="metric-card">
+                            <h4 class="font-bold text-lg mb-2">Instagram (525K+ Followers)</h4>
+                            <div class="social-grid-container grid grid-cols-3 gap-2">
+                                <img src="https://placehold.co/150x150/fce7f3/db2777?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/fce7f3/db2777?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/fce7f3/db2777?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/fce7f3/db2777?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/fce7f3/db2777?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/fce7f3/db2777?text=Post" class="rounded w-full h-auto">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -417,6 +505,33 @@
                         </ul>
                     </div>
                 </div>
+                 <div class="mt-8">
+                    <h3 class="metric-title mb-3">Social Media Presence</h3>
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                        <div class="metric-card">
+                            <h4 class="font-bold text-lg mb-2">Facebook</h4>
+                            <div class="social-grid-container grid grid-cols-3 gap-2">
+                                <img src="https://placehold.co/150x150/f3e8ff/7e22ce?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/f3e8ff/7e22ce?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/f3e8ff/7e22ce?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/f3e8ff/7e22ce?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/f3e8ff/7e22ce?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/f3e8ff/7e22ce?text=Post" class="rounded w-full h-auto">
+                            </div>
+                        </div>
+                        <div class="metric-card">
+                            <h4 class="font-bold text-lg mb-2">Instagram</h4>
+                            <div class="social-grid-container grid grid-cols-3 gap-2">
+                                <img src="https://placehold.co/150x150/f3e8ff/7e22ce?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/f3e8ff/7e22ce?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/f3e8ff/7e22ce?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/f3e8ff/7e22ce?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/f3e8ff/7e22ce?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/f3e8ff/7e22ce?text=Post" class="rounded w-full h-auto">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -462,6 +577,33 @@
                             <li>A better website alone could capture their dissatisfied users.</li>
                             <li>PPC can easily win traffic for their core product terms.</li>
                         </ul>
+                    </div>
+                </div>
+                 <div class="mt-8">
+                    <h3 class="metric-title mb-3">Social Media Presence</h3>
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                        <div class="metric-card">
+                            <h4 class="font-bold text-lg mb-2">Facebook</h4>
+                            <div class="social-grid-container grid grid-cols-3 gap-2">
+                                <img src="https://placehold.co/150x150/dbeafe/1d4ed8?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/dbeafe/1d4ed8?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/dbeafe/1d4ed8?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/dbeafe/1d4ed8?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/dbeafe/1d4ed8?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/dbeafe/1d4ed8?text=Post" class="rounded w-full h-auto">
+                            </div>
+                        </div>
+                        <div class="metric-card">
+                            <h4 class="font-bold text-lg mb-2">Instagram (786K Followers)</h4>
+                            <div class="social-grid-container grid grid-cols-3 gap-2">
+                                <img src="https://placehold.co/150x150/dbeafe/1d4ed8?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/dbeafe/1d4ed8?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/dbeafe/1d4ed8?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/dbeafe/1d4ed8?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/dbeafe/1d4ed8?text=Post" class="rounded w-full h-auto">
+                                <img src="https://placehold.co/150x150/dbeafe/1d4ed8?text=Post" class="rounded w-full h-auto">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
