--- a/index.html
+++ b/index.html
@@ -289,8 +289,15 @@
                             <h3 class="metric-title mb-3">Marketing & Campaign Highlights</h3>
                             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                                 <div class="metric-card">
-                                    <h4 class="font-bold text-lg mb-2">Occasion Post (Puja)</h4>
+                                    <h4 class="font-bold text-lg mb-2">Occasion Post </h4>
+                                    <img src="https://scontent.fccu27-1.fna.fbcdn.net/v/t39.30808-6/517426868_1163417565828201_5543129247848137541_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=127cfc&_nc_ohc=HWXbSwh3GcoQ7kNvwFfIZey&_nc_oc=AdnXs4Brb5E1z5yqCS77NrlH8lLTXrXeK0u1j_tQPdtW8yQfkKTYRTJ8hoNcj7uKXAI9ABngnRKEY1ehxHxddJ9z&_nc_zt=23&_nc_ht=scontent.fccu27-1.fna&_nc_gid=fTfEFKAz_CQzZXzTHzQQ2w&oh=00_AfUdT9hoxeiOuI0I3r6hdiag6BgMLOdwssV0pIxXGao6OA&oe=68ACE39D" class="rounded w-full h-auto">
+                                    <img src="https://scontent.fccu20-1.fna.fbcdn.net/v/t39.30808-6/484943494_1071857728317519_2065051100669623949_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=127cfc&_nc_ohc=tg2vRn1RvE4Q7kNvwHMLmPg&_nc_oc=AdloOVDe-YoML71mkB9cxLHUzN3wZJMCAT89ooSzZmn4kkJHSDdkyXThA8VpvS1VtRWtHSS7DPDf_B5QQ3ezEwYQ&_nc_zt=23&_nc_ht=scontent.fccu20-1.fna&_nc_gid=A4BAop0XkG68NhUZm7yq4Q&oh=00_AfWNnE12_oZW4XR9cXDAITUhL5iiorsBpYJm1uGdgWTsEw&oe=68ACEB79" class="rounded w-full h-auto">
                                     <img src="https://placehold.co/400x300/dcfce7/166534?text=Happy+Durga+Puja" class="rounded w-full h-auto">
+                                    <img src="https://placehold.co/400x300/dcfce7/166534?text=Happy+Durga+Puja" class="rounded w-full h-auto">
+                                    <img src="https://placehold.co/400x300/dcfce7/166534?text=Happy+Durga+Puja" class="rounded w-full h-auto">
+                                    <img src="https://placehold.co/400x300/dcfce7/166534?text=Happy+Durga+Puja" class="rounded w-full h-auto">
+
+                    
                                 </div>
                                 <div class="metric-card">
                                     <h4 class="font-bold text-lg mb-2">Event Banner</h4>
@@ -770,3 +777,4 @@
 
 </body>
 </html>
+
