--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                                 <div class="metric-card">
                                     <h4 class="font-bold text-lg mb-2">Reel Preview</h4>
                                     <a href="#" class="block relative">
-                                        <img src="https://placehold.co/400x300/dcfce7/166534?text=New+Recipe+Reel" class="rounded w-full h-auto">
+                                        <img src="https://www.facebook.com/reel/1891530894585010" class="rounded w-full h-auto">
                                         <div class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-25">
                                             <svg class="w-12 h-12 text-white" fill="currentColor" viewBox="0 0 20 20"><path d="M10 18a8 8 0 100-16 8 8 0 000 16zM9.555 7.168A1 1 0 008 8v4a1 1 0 001.555.832l3-2a1 1 0 000-1.664l-3-2z"></path></svg>
                                         </div>
@@ -777,4 +777,5 @@
 
 </body>
 </html>
+
 
